fixed my picture overflowing the bg div

--- a/src/index.css
+++ b/src/index.css
@@ -68,9 +68,8 @@ code {
 
 .me_img {
   width: 100%;
-  width: 150px;
   color: black;
-  background-color: rgb(197, 205, 216);;
+  background-color: rgb(197, 205, 216);
 }
 
 .header_img {
